Fixed BUG#16303: erroneus stored procedures and functions should be droppable   Use a special lookup function for DROP, which doesn't attempt to parse the   definition.